Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31924

TargetSetupPage: Select all checks also unsuitable kits

XMLWordPrintable

    • All
    • 78aa9ae0b (15.0)

      Steps to reproduce:

      • have multiple kits configured, some with specific settings, some with missing stuff (no Qt, no CMake)
      • create a project, on the kits page (or later after configuring on the Project view after disabling the configured kits)
        • check there are suitable and unsuitable kits (enabled, disabled)
        • check the select all on top is checked partially (on the wizard, as it usually chooses at least one matching kit) or not at all (after disabling the last kit for the project)
        • click select all

      Current result:

      • even not enabled kits get checked

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes