ProjectExplorer: Do not select unsuitable kits in target setup page

... even when "select all kits" gets clicked.

Fixes: QTCREATORBUG-31924
Change-Id: I228e2e6e2ee329e8fca1c0d7fef93083fa304da7
Reviewed-by: Christian Stenger <christian.stenger@qt.io>